--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <body>
     <h1>POST A MESSAGE</h1>
     <form id="formthing">
+      <input type="text" id="title" placeholder="Enter Your Title">
       <textarea id="text"></textarea>
       <input type="submit" value="post" >
     </form>
