--- a/public/messages.html
+++ b/public/messages.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
     <title>BULLETIN</title>
+    <link rel="stylesheet" href="messages.css">
   </head>
   <body>
-    BULLETIN POSTS
+    <h1>BULLETIN BOARD</h1>
+    <hr>
+    <div id="content">
+      
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="messages.js"></script>
   </body>
